--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "NODE_ENV=test lab -c"
   },
   "author": "",
   "license": "ISC",
@@ -15,5 +15,8 @@
     "hapi": "^13.2.1",
     "joi": "^8.0.5",
     "mongoose": "^4.4.9"
+  },
+  "devDependencies": {
+    "ava": "^0.13.0"
   }
 }
