--- a/package.json
+++ b/package.json
@@ -19,7 +19,8 @@
     "mongoose": "^4.4.9",
     "mongoose-deep-populate": "^3.0.0",
     "node-googleplaces": "^0.1.2",
-    "rand-token": "^0.2.1"
+    "rand-token": "^0.2.1",
+    "twilio": "^2.9.0"
   },
   "devDependencies": {
     "ava": "^0.13.0"
