--- a/package.json
+++ b/package.json
@@ -1,12 +1,12 @@
 {
-  "name": "il2",
-  "version": "1.0.0",
+  "name": "string-api",
+  "version": "0.1.0",
   "description": "",
   "main": "index.js",
   "scripts": {
     "test": "NODE_ENV=test lab -c"
   },
-  "author": "",
+  "author": "Ross Brown",
   "license": "ISC",
   "dependencies": {
     "boom": "^3.1.2",
@@ -14,12 +14,16 @@
     "good-console": "^5.3.1",
     "hapi": "^13.2.1",
     "hapi-auth-jwt2": "^5.4.1",
+    "hapi-swaggered": "^2.6.0",
+    "hapi-swaggered-ui": "^2.3.1",
+    "inert": "^3.2.0",
     "joi": "^8.0.5",
     "jsonwebtoken": "^5.7.0",
     "mongoose": "^4.4.9",
     "mongoose-deep-populate": "^3.0.0",
     "node-googleplaces": "^0.1.2",
-    "rand-token": "^0.2.1"
+    "rand-token": "^0.2.1",
+    "vision": "^4.0.1"
   },
   "devDependencies": {
     "ava": "^0.13.0"
