--- a/package.json
+++ b/package.json
@@ -23,7 +23,7 @@
     "mongoose-deep-populate": "^3.0.0",
     "node-googleplaces": "^0.1.2",
     "rand-token": "^0.2.1",
-    "vision": "^4.0.1"
+    "vision": "^4.0.1",
     "twilio": "^2.9.0"
   },
   "devDependencies": {
