--- a/package.json
+++ b/package.json
@@ -15,19 +15,22 @@
     "underscore": "^1.8.3"
   },
   "devDependencies": {
+    "ava": "^0.13.0",
     "gulp": "^3.7.0",
     "gulp-jshint": "^1.9.0",
-    "jshint-stylish": "^0.1.3",
     "gulp-shell": "^0.5.0",
+    "gulp-stylus": "^2.1.0",
     "gulp-watch": "^4.3.5",
-    "gulp-stylus": "^2.1.0"
+    "jshint-stylish": "^0.1.3",
+    "lab": "^10.4.0"
   },
   "engines": {
     "node": ">=0.10.22",
     "npm": ">=1.3.14"
   },
   "scripts": {
-    "start": "node keystone.js"
+    "start": "node keystone.js",
+    "test": "NODE_ENV=test lab -c"
   },
   "main": "keystone.js"
 }
