--- a/package.json
+++ b/package.json
@@ -22,7 +22,8 @@
     "gulp-stylus": "^2.1.0",
     "gulp-watch": "^4.3.5",
     "jshint-stylish": "^0.1.3",
-    "lab": "^10.4.0"
+    "lab": "^10.4.0",
+    "supertest": "^1.2.0"
   },
   "engines": {
     "node": ">=0.10.22",
@@ -30,7 +31,14 @@
   },
   "scripts": {
     "start": "node keystone.js",
-    "test": "NODE_ENV=test lab -c"
+    "test": "NODE_ENV=test ava",
+    "tester": "NODE_ENV=test ava -w"
   },
-  "main": "keystone.js"
+  "main": "keystone.js",
+  "ava": {
+    "files": [
+      "test/**/*_test.js"
+    ],
+    "failFast": true
+  }
 }
