--- a/package.json
+++ b/package.json
@@ -15,14 +15,14 @@
     "underscore": "^1.8.3"
   },
   "devDependencies": {
-    "ava": "^0.13.0",
+    "chai": "^3.5.0",
     "gulp": "^3.7.0",
     "gulp-jshint": "^1.9.0",
     "gulp-shell": "^0.5.0",
     "gulp-stylus": "^2.1.0",
     "gulp-watch": "^4.3.5",
     "jshint-stylish": "^0.1.3",
-    "lab": "^10.4.0",
+    "mocha": "^2.4.5",
     "supertest": "^1.2.0"
   },
   "engines": {
@@ -31,14 +31,8 @@
   },
   "scripts": {
     "start": "node keystone.js",
-    "test": "NODE_ENV=test ava",
-    "tester": "NODE_ENV=test ava -w"
+    "test": "NODE_ENV=test mocha --recursive",
+    "tester": "NODE_ENV=test mocha -w --recursive"
   },
-  "main": "keystone.js",
-  "ava": {
-    "files": [
-      "test/**/*_test.js"
-    ],
-    "failFast": true
-  }
+  "main": "keystone.js"
 }
