--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "gulp-watch": "^4.3.5",
     "jshint-stylish": "^0.1.3",
     "mocha": "^2.4.5",
+    "replay": "^2.0.6",
     "supertest": "^1.2.0"
   },
   "engines": {
