--- a/package.json
+++ b/package.json
@@ -23,7 +23,7 @@
     "gulp-watch": "^4.3.5",
     "jshint-stylish": "^0.1.3",
     "mocha": "^2.4.5",
-    "replay": "^2.0.6",
+    "nock": "^8.0.0",
     "supertest": "^1.2.0"
   },
   "engines": {
@@ -31,7 +31,7 @@
     "npm": ">=1.3.14"
   },
   "scripts": {
-    "start": "node keystone.js",
+    "start": "node server.js",
     "test": "NODE_ENV=test mocha --recursive",
     "tester": "NODE_ENV=test mocha -w --recursive"
   },
