--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "node-googleplaces": "^0.1.2",
     "rand-token": "^0.2.1",
     "stylus": "^0.53.0",
+    "swagger-tools": "^0.10.1",
     "twilio": "^2.9.0",
     "underscore": "^1.8.3"
   },
