--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "keystone": "^0.3.16",
     "node-googleplaces": "^0.1.2",
     "rand-token": "^0.2.1",
+    "socket.io": "^1.4.8",
     "stylus": "^0.53.0",
     "swagger-tools": "^0.10.1",
     "twilio": "^2.9.0",
@@ -32,7 +33,7 @@
     "npm": ">=1.3.14"
   },
   "scripts": {
-    "start": "node server.js",
+    "start": "nodemon server.js",
     "test": "NODE_ENV=test mocha --recursive",
     "tester": "NODE_ENV=test mocha -w --recursive"
   },
