--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.0.0",
   "private": true,
   "dependencies": {
+    "apiai": "^2.0.5",
     "async": "^1.5.0",
     "boom": "^3.1.2",
     "dotenv": "^1.1.0",
