--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "dotenv": "^1.1.0",
     "jsonwebtoken": "^5.7.0",
     "keystone": "^0.3.16",
+    "mongoose-simple-random": "^0.3.3",
     "node-googleplaces": "^0.1.2",
     "rand-token": "^0.2.1",
     "socket.io": "^1.4.8",
