--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
   "scripts": {
     "start": "nodemon server.js",
     "test": "NODE_ENV=test mocha --recursive",
+    "test:watch": "NODE_ENV=test mocha --recursive --watch",
     "tester": "NODE_ENV=test mocha -w --recursive"
   },
   "main": "keystone.js"
