--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "jsonwebtoken": "^5.7.0",
     "keystone": "^0.3.16",
     "mongoose-simple-random": "^0.3.3",
+    "mongoose": "^4.5.4",
     "node-googleplaces": "^0.1.2",
     "rand-token": "^0.2.1",
     "socket.io": "^1.4.8",
