--- a/package.json
+++ b/package.json
@@ -10,9 +10,10 @@
     "joi": "^9.0.0",
     "jsonwebtoken": "^5.7.0",
     "keystone": "^0.3.16",
-    "mongoose-simple-random": "^0.3.3",
     "mongoose": "^4.5.4",
+    "mongoose-simple-random": "^0.3.3",
     "node-googleplaces": "^0.1.2",
+    "ramda": "^0.21.0",
     "rand-token": "^0.2.1",
     "socket.io": "^1.4.8",
     "stylus": "^0.53.0",
@@ -37,7 +38,7 @@
     "npm": ">=1.3.14"
   },
   "scripts": {
-    "start": "nodemon server.js",
+    "start": "nodemon server.js --legacy-watch",
     "test": "NODE_ENV=test mocha --recursive",
     "test:watch": "NODE_ENV=test mocha --recursive --watch",
     "tester": "NODE_ENV=test mocha -w --recursive"
