--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "ramda": "^0.21.0",
     "rand-token": "^0.2.1",
     "socket.io": "^1.4.8",
+    "string_score": "^0.1.22",
     "stylus": "^0.53.0",
     "swagger-tools": "^0.10.1",
     "twilio": "^2.9.0",
@@ -31,7 +32,9 @@
     "jshint-stylish": "^0.1.3",
     "mocha": "^2.4.5",
     "nock": "^8.0.0",
-    "supertest": "^1.2.0"
+    "supertest": "^1.2.0",
+    "eslint": "^2.12.0",
+    "eslint-config-keystone": "^2.3.1"
   },
   "engines": {
     "node": ">=6.2.0",
