--- a/package.json
+++ b/package.json
@@ -31,7 +31,9 @@
     "jshint-stylish": "^0.1.3",
     "mocha": "^2.4.5",
     "nock": "^8.0.0",
-    "supertest": "^1.2.0"
+    "supertest": "^1.2.0",
+    "eslint": "^2.12.0",
+    "eslint-config-keystone": "^2.3.1"
   },
   "engines": {
     "node": ">=6.2.0",
