--- a/package.json
+++ b/package.json
@@ -23,6 +23,9 @@
   },
   "devDependencies": {
     "chai": "^3.5.0",
+    "chai-as-promised": "^5.3.0",
+    "eslint": "^2.12.0",
+    "eslint-config-keystone": "^2.3.1",
     "gulp": "^3.7.0",
     "gulp-jshint": "^1.9.0",
     "gulp-shell": "^0.5.0",
@@ -31,9 +34,7 @@
     "jshint-stylish": "^0.1.3",
     "mocha": "^2.4.5",
     "nock": "^8.0.0",
-    "supertest": "^1.2.0",
-    "eslint": "^2.12.0",
-    "eslint-config-keystone": "^2.3.1"
+    "supertest": "^1.2.0"
   },
   "engines": {
     "node": ">=6.2.0",
