--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "ramda": "^0.21.0",
     "rand-token": "^0.2.1",
     "socket.io": "^1.4.8",
+    "string": "^3.3.1",
     "stylus": "^0.53.0",
     "swagger-tools": "^0.10.1",
     "twilio": "^2.9.0",
