return signature and upload_url with hangle_image_choice response

--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "apiai": "^2.0.5",
     "async": "^1.5.0",
     "boom": "^3.1.2",
+    "cloudinary": "^1.4.1",
     "dotenv": "^1.1.0",
     "joi": "^9.0.0",
     "jsonwebtoken": "^5.7.0",
@@ -15,6 +16,7 @@
     "node-googleplaces": "^0.1.2",
     "ramda": "^0.21.0",
     "rand-token": "^0.2.1",
+    "sha1": "^1.1.1",
     "socket.io": "^1.4.8",
     "string": "^3.3.1",
     "stylus": "^0.53.0",
