--- a/package.json
+++ b/package.json
@@ -42,7 +42,7 @@
     "supertest": "^1.2.0"
   },
   "engines": {
-    "node": ">=6.2.0",
+    "node": "6.2.0",
     "npm": ">=1.3.14"
   },
   "scripts": {
